# p9-projekt

./: .gitignore  CMakeLists.txt  Makefile  README.md  generate_flexoffers.cpp  main.cpp  makefile  request.cpp
aggregation/: ChangesList.cpp  ChangesList.h  aggregation.cpp  aggregation.h  grid.cpp  grid.h  group.cpp  group.h  helperfunctions.cpp  helperfunctions.h
data/: FCR_Solution.csv  FCRprices.csv  aggregation_performance.csv  aggregator_solutions.csv  disaggregated_flexoffers.csv  economic_savings.csv  ev_data.csv  metrics.csv  spotprices.csv  stable_test_data.csv
evaluation/: evaluation.cpp  evaluation.h
flexoffers/: flexoffer.cpp  flexoffer.h
include/: ChangesList.h  DFO.h  aggregation.h  alignments.h  economic.h  evaluation.h  flexoffer.h  generator.h  grid.h  group.h  helperfunctions.h  inc_aggregation.h  parsing.h  scheduled_flexoffer.h  solver.h  tec.h  unit_test.h
scheduled_flexoffer/: scheduled_flexoffer.cpp  scheduled_flexoffer.h
src/: ChangesList.cpp  DFO.cpp  aggregation.cpp  alignments.cpp  dfo_alignments.cpp  economic.cpp  evaluation.cpp  flexoffer.cpp  generator.cpp  grid.cpp  group.cpp  helperfunctions.cpp  inc_aggregation.cpp  main.cpp  parsing.cpp  scheduled_flexoffer.cpp  solver.cpp  tec.cpp  unit_tests.cpp
unused_utils/: FCR_price_data.cpp  Price_data.cpp  request.cpp  request_ev_data.cpp
utils/: FCR_price_data.cpp  Price_data.cpp  ev_data.csv  get_ev  get_fcr_prices  request_ev_data.cpp
visuals/: plot_fcr.py  plot_metrics.py  plot_solver_dis.py  plots.py
